added enumeration, changed theme style(primary color changed), changed default theme, migreated storage.ts to an actual mysql database

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -18,15 +18,15 @@
   --sidebar: 240 5% 96%;
   --sidebar-foreground: 240 4% 16%;
   --sidebar-border: 240 6% 92%;
-  --sidebar-primary: 262 83% 58%;
+  --sidebar-primary: 204.7 41.5% 24.1%;
   --sidebar-primary-foreground: 0 0% 98%;
   --sidebar-accent: 240 8% 92%;
   --sidebar-accent-foreground: 240 4% 16%;
-  --sidebar-ring: 262 83% 58%;
+  --sidebar-ring: 204.7 41.5% 24.1%;
   --popover: 0 0% 96%;
   --popover-foreground: 240 4% 16%;
   --popover-border: 240 6% 92%;
-  --primary: 262 83% 58%;
+  --primary: 204.7 41.5% 24.1%; /* */
   --primary-foreground: 0 0% 98%;
   --secondary: 240 8% 92%;
   --secondary-foreground: 240 4% 16%;
@@ -37,8 +37,8 @@
   --destructive: 0 84% 60%;
   --destructive-foreground: 0 0% 98%;
   --input: 240 6% 75%;
-  --ring: 262 83% 58%;
-  --chart-1: 262 83% 58%;
+  --ring: 204.7 41.5% 24.1%;
+  --chart-1: 204.7 41.5% 24.1%;
   --chart-2: 173 58% 39%;
   --chart-3: 197 37% 24%;
   --chart-4: 43 74% 49%;
@@ -102,15 +102,15 @@
   --sidebar: 240 5% 14%;
   --sidebar-foreground: 0 0% 98%;
   --sidebar-border: 240 5% 18%;
-  --sidebar-primary: 262 83% 58%;
+  --sidebar-primary: 204.7 41.5% 24.1%;
   --sidebar-primary-foreground: 0 0% 98%;
   --sidebar-accent: 240 8% 18%;
   --sidebar-accent-foreground: 0 0% 98%;
-  --sidebar-ring: 262 83% 58%;
+  --sidebar-ring: 204.7 41.5% 24.1%;
   --popover: 240 5% 16%;
   --popover-foreground: 0 0% 98%;
   --popover-border: 240 5% 20%;
-  --primary: 262 83% 58%;
+  --primary: 204.7 41.5% 24.1%;
   --primary-foreground: 0 0% 98%;
   --secondary: 240 8% 20%;
   --secondary-foreground: 0 0% 98%;
@@ -121,7 +121,7 @@
   --destructive: 0 84% 60%;
   --destructive-foreground: 0 0% 98%;
   --input: 240 6% 35%;
-  --ring: 262 83% 58%;
+  --ring: 204.7 41.5% 24.1%;
   --chart-1: 262 83% 70%;
   --chart-2: 173 58% 65%;
   --chart-3: 197 37% 65%;
